# AvisTrack

./: .gitignore  README.md  RUNLE_ISSUES_AND_PLAN.md  improve-plan.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
avistrack/: __init__.py  lineage.py  workspace.py
avistrack/backends/: __init__.py  base.py  dlc.py  vit.py
avistrack/config/: __init__.py  drive_probe.py  loader.py  schema.py
cli/: run_batch.py
configs/: chamber_type_sources_template.yaml  recipe_template.yaml  template.yaml  w2_collective_prod.yaml  wave2_collective.yaml  wave3_collective.yaml  wave3_vr.yaml  workspace_template.yaml
docs/: SESSION_2026-05-01_vr_workspace_bootstrap.md  production_pipeline_plan.md  tui-plan
eval/: infer_clips.py  run_eval.py  score.py  trackers.py  viewer.py
tests/: test_config.py  test_lineage.py  test_run_eval_workspace.py  test_run_pipeline.py  test_run_train_workspace.py  test_sample_clips.py  test_step_d.py  test_step_f.py  test_step_g.py  test_time_lookup.py  test_transformer.py  test_workspace.py  test_workspace_bootstrap.py
tools/: aggregate_for_training.py  build_dataset.py  calibrate_time.py  curate_frames.py  edit_valid_ranges.py  export_for_deploy.py  extract_frames.py  import_annotations.py  ingest_cvat_export.py  init_chamber_workspace.py  init_config.py  list_clips.py  list_experiments.py  pick_rois.py  rebuild_index.py  register_chamber_source.py  review_triage.py  sample_clips.py  scan_hdd.py  scan_legacy_wave.py  show_lineage.py  verify_tracks.py  w3_plot.py
train/: run_multi_train.py  run_pipeline.py  run_train.py
(+21 files in other folders)
