[project]
name = "avistrack"
version = "0.1.0"
description = "A stable, model-agnostic tracking engine for avian behavioral experiments."
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["avistrack*"]
